# pam_truenas

./: Makefile.am  README.md  configure.ac
.github/workflows/: build-test.yml  qemu-test.yml
.github/workflows/scripts/: qemu-2-start.sh  qemu-3-build.sh  qemu-4-test.sh  qemu-5-collect-logs.sh
debian/: changelog  control  copyright  rules
src/: Makefile.am  cleanup.h  error.c  error.h  includes.h  json.c  json.h  keyring.c  keyring.h  kr_session.c  kr_session.h  pam_truenas.c  pam_truenas.h  pam_truenas_auth.c  pam_truenas_ctx.c  pam_truenas_session.c  tally.c  tally.h  utils.c
src/python/: pyproject.toml  truenas_pam_faillog.py  truenas_pam_session.py
tests/: conftest.py  test_api_key_auth_legacy.py  test_dual_auth_methods.py  test_max_sessions.py  test_scram_auth.py  test_session_management.py  test_tally_behavior.py
